Update Open Graph image paths in index.html

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://replit.com/public/images/opengraph.png"
+      content="/images/opengraph.png"
     />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Крестики & Нолики" />
@@ -25,7 +25,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://replit.com/public/images/opengraph.png"
+      content="/images/opengraph.png"
     />
 
     <link rel="icon" href="/favicon.ico" sizes="any" />
